<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F0F0F0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomePage" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@layout/custom_shape"
        android:gravity="center" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="18dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@layout/custom_shape"
        android:gravity="center|center_vertical" >

        <Button
            android:id="@+id/hide"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.03"
            android:text="Hide" />

        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.03"
            android:text="Quit" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/btns_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:weightSum="10"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:textOff="OFF"
            android:textOn="OFF" />

        <ToggleButton
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1.2"
            android:textOff="1"
            android:textOn="1" />

        <ToggleButton
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1.4"
            android:textOff="2"
            android:textOn="2" />

        <ToggleButton
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_weight="1.6"
            android:textOff="3"
            android:textOn="3" />

        <ToggleButton
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1.8"
            android:textOff="4"
            android:textOn="4" />

        <ToggleButton
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="2"
            android:textOff="5"
            android:textOn="5" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btns_layout"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="0dp"
        android:max="5"/>

    <LinearLayout
        android:id="@+id/numlayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:weightSum="10"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/txt0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:text="1" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="2" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="3" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="4" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5" />
    </LinearLayout>
    </LinearLayout>

    <ToggleButton
        android:id="@+id/btstatus"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/connect"
        android:layout_below="@+id/header"
        android:layout_marginTop="10dp"
        android:textOn="@string/btStatusOff"
        android:textOff="@string/btStatusOn" />

    <ToggleButton
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btstatus"
        android:layout_marginTop="16dp"
        android:textOff="@string/connectOn"
        android:textOn="@string/connectOff" />

    <Button
        android:id="@+id/schedbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/progressBar"
        android:text="Schedule an Event" />

</RelativeLayout>